--- a/Home/assets/stylesheet/app.css
+++ b/Home/assets/stylesheet/app.css
@@ -1,4 +1,6 @@
-
+body{
+    font-family: 'Open Sans', sans-serif;;
+}
 
 *{
     margin: 0px;
@@ -10,108 +12,186 @@
 
 h2{
     color:  #094C40;
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
 
 
 .nav-bar{
-    /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
-    margin: 1rem;
+    margin: 1rem 2rem;
 
 
 }
 
-.menu-icon > div{
-    width: 30px;
-    height: 3px;
-    background-color: black;
-    margin: 3px 0;
-}
 .left, .right{
   
     display: flex;
     padding: 1rem;
-    /* border: 1px solid red; */
     
-}
-.right > img  {
-    margin: 0 1.5rem ;
-    height: 50%;
 }
  .left > h4{
     margin-left: 1rem;
  }
+
+ .btn-wrap{
+   display: flex;
+   flex-wrap: wrap;
+   gap: 1rem;
+   margin-right: 2rem;
+ }
+
+ .btn-wrap > img  {
+   /* margin: 0 1.5rem ; */
+   height: 60%;
+}
+
+.menu-icon > div{
+   width: 30px;
+   height: 3px;
+   background-color: black;
+   margin: 3px 0;
+}
+ 
  .back-img{
     position: relative;
  }
- .text{
-    position: absolute;
-    top: 40%;
-    left: 20%;
+
+ 
+
+
+  /* ................................................*/
+
+ .wrap-img-text{
+    position: relative;
+    display: flex;  
+    flex-direction: column;      
+ }
+ .first{
+   width: 33%;
+ }
+ .second, .third{
+   width: 20%;
+ }
+ 
+ .first, .third{
+    align-self: flex-end;
  }
 
+ .hexagon-img{
+    transform: translateX(-50%);
+    /* margin-left: -13rem; */
+ }
+ .circle-img{
+    margin-top: 6rem;
+ }
+ .text{
+   position: relative;
+
+   left: 13%;
+   transform: translateY(-128%);
+   
+   max-width: 55%;
+  
+ 
+  
+}
+
+
+ .mid-img-wrap
+{
+    position: absolute;
+    transform: translate(17%,77%);
+    max-width: 80%;  
+    background-color: #F7F7F7;
+  
+ 
+}
 
  .mid-img{
-    position: absolute;
-    width: 70%;
-    margin: auto;
-    top: 75%;
-    left: 20%;
+    width: 100%;
+    padding: 1rem 3rem;
+ 
  
  }
 
 
-  .first-section-text{  
+ /* ........................ */
+
+  .second-section{  
     background-color: #094C40;
     color: white;
 
   }
+  .second-container{
+    display: flex;
+    flex-direction: column;
+    
+  }
 
-  .block-para{
-    width: 60%;
-    margin: auto;
-    /* border: 1px solid red; */
-    padding-top: 18rem;
- 
+  .block-para {
+    margin-top: 20rem;
+    margin-left: 13rem;
     letter-spacing: 1px;
     font-size: 1.3rem;
 }
 
 .wrap-logo{
-    padding: 4rem;
-
+    display: flex;
+    flex-direction: column;
+   
+  
 }
 
 
  
  .first-row-logo , .second-row-logo{
-    
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 70%;
-        /* border: 1px solid red; */
-        margin: auto;
-    
+       display: flex;
+       justify-content: space-evenly;
+       align-items: center;
+       
+ }
+ .second-row-logo{
+   margin-left: 5rem;
  }
  .line{
-    width: 70%;
+    width: 75%;
     margin: auto;
     color: #ffff;
    
  }
 
  a { 
+   margin:3rem 0 10rem 13rem ;
   
-   
-    margin-left: 13rem;
-    margin-bottom: 10rem;
     text-decoration: none;
     color: white;
  }
+
  
  
+ @media only screen and (max-width: 600px){
+   .btn-wrap{
+      display: none;
+   }
 
+  
+ }
+ @media only screen and (max-width:992px){
+   h2{
+      font-size: 3rem;
+   }
+  
+   .first{
+      width: 40%;
+    }
+    .second, .third{
+      width: 25%;
+    }
 
+    .circle-img{
+ 
+      margin-top: 0;
+     
+   }
+ }
