--- a/Home/assets/stylesheet/app.css
+++ b/Home/assets/stylesheet/app.css
@@ -87,7 +87,7 @@ h2{
     overflow:hidden;
     text-overflow: ellipsis;
     /* white-space: nowrap; */
-    position: relative;
+   
 }
 
 
@@ -107,9 +107,16 @@ img{
     height: 40%;
 }
 
+.article-content{
+    position: relative;
+}
+
 .btn-readmore{
     position: absolute;
     right: 50%;
+    color:var(--h1-color);
+    font-size: 25px;
+    font-weight: var(--font-weight-bold);
 }
 
 /* @media (min-width: 768px) {
