--- a/project/assets/stylesheets/app.css
+++ b/project/assets/stylesheets/app.css
@@ -57,6 +57,7 @@ li{
     
 }
 
+/*........... hero-wrap added........... */
 .hero-wrap{
     padding: 20rem;
     margin-left:9rem;
@@ -85,6 +86,7 @@ li{
     bottom: 90px;
     right: 0;
     z-index: -1;
+    /* z-index added */
 }
 
 .wrap-image h1{
